# ostp

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  README.md  README.ru.md  server.json  test.json  test_route.ps1
.github/workflows/: clients.yml  release.yml
docs/: relay-config-example.json
docs/en/: client.md  ieee_spec.md  obfuscation.md  rfc_ostp.txt
docs/ru/: obfuscation.md
netstack-smoltcp/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
netstack-smoltcp/examples/: forward-offload-linux.rs  forward.rs
netstack-smoltcp/scripts/: bench-offload.sh
netstack-smoltcp/src/: device.rs  stack.rs  tcp.rs  udp.rs
netstack-smoltcp/tests/: regression.rs
ostp/: Cargo.toml
ostp-client/: Cargo.toml  test_udp.rs
ostp-client/src/: app.rs  bridge.rs  config.rs  runner.rs  signal.rs  sysproxy.rs  turn.rs
ostp-client/src/transport/: xhttp.rs
ostp-client/src/tunnel/: linux_handler.rs  mod.rs  native_handler.rs  proxy.rs  smoltcp_stack.rs  tun_device.rs  udp_nat.rs  wintun_downloader.rs  wintun_handler.rs
ostp-control/: index.html  package-lock.json  package.json
ostp-control/src/: App.tsx  index.css
ostp-control/src/lib/: LanguageContext.tsx  api.ts  audit.ts  i18n.ts
ostp-control/src/pages/: AuditLogs.tsx  Clients.tsx  ConnectionSetup.tsx  Dashboard.tsx  Dns.tsx  Login.tsx  Settings.tsx  Tools.tsx  Wiki.tsx
ostp-core/: Cargo.toml
ostp-core/src/: congestion.rs  lib.rs  protocol.rs  relay.rs  resumption.rs
ostp-core/src/crypto/: mod.rs  noise.rs  obfuscation.rs  obfuscation_tests.rs  reality.rs
ostp-core/src/framing/: frame.rs  mod.rs  padding.rs  wss.rs
ostp-flutter/: README.md  build.ps1  build_android_jni.ps1  pubspec.yaml
ostp-flutter/android/app/: build.gradle.kts
ostp-flutter/android/app/src/main/: AndroidManifest.xml
ostp-flutter/lib/: main.dart
ostp-flutter/test/: widget_test.dart
ostp-gui/: build_dist.js  package.json
ostp-gui/src/: i18n.js  index.html  main.js  styles.css
ostp-gui/src-tauri/: Cargo.toml  tauri.conf.json
ostp-gui/src-tauri/permissions/: app-commands.toml
ostp-gui/src-tauri/src/: lib.rs  main.rs
ostp-jni/: Cargo.toml  OstpClientSdk.kt
ostp-jni/src/: lib.rs
ostp-server/: Cargo.toml
ostp-server/src/: api.rs  dispatcher.rs  dns.rs  lib.rs  relay.rs  relay_node.rs
ostp-server/src/transport/: mod.rs  uot.rs
ostp-tun-helper/: Cargo.toml
ostp-tun-helper/src/: main.rs
ostp/src/: main.rs
scripts/: build.ps1  install.ps1  install.sh  test_linux.sh
target_linux/: .rustc_info.json
target_linux/release/.fingerprint/anyhow-e62cdfb0455fd4f9/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/async-trait-679822087579a0f3/: lib-async_trait  lib-async_trait.json
target_linux/release/.fingerprint/clap_derive-aaf981945b8d17fe/: lib-clap_derive  lib-clap_derive.json
target_linux/release/.fingerprint/curve25519-dalek-7cf6dddb14aa4756/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/curve25519-dalek-derive-a9027d4b76f8b498/: lib-curve25519_dalek_derive  lib-curve25519_dalek_derive.json
target_linux/release/.fingerprint/generic-array-cb54359ea8b8184a/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/heck-93181e9cb3ac1c68/: lib-heck  lib-heck.json
target_linux/release/.fingerprint/libc-71ca86a88419613b/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/proc-macro2-263748b18dca16e2/: lib-proc_macro2  lib-proc_macro2.json
target_linux/release/.fingerprint/proc-macro2-544b8d231d8c3a29/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/proc-macro2-eb0a6dc1a4bba162/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_linux/release/.fingerprint/quote-1fd0fedfe9b16b61/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_linux/release/.fingerprint/quote-c6f7cc898613a129/: lib-quote  lib-quote.json
target_linux/release/.fingerprint/quote-d6324adbe6fbc1b8/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/rustc_version-cbf0a3a37342423f/: lib-rustc_version  lib-rustc_version.json
target_linux/release/.fingerprint/semver-38092f9e54c220f4/: lib-semver  lib-semver.json
target_linux/release/.fingerprint/serde-5fa5b590484ba9aa/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/serde_core-20ac9499cf692a43/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/serde_derive-01ceec495c3ac2a2/: lib-serde_derive  lib-serde_derive.json
target_linux/release/.fingerprint/serde_json-3ebdb9d0a9bf3f98/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/snow-d0f9f74971807a67/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/syn-7e89902d9f592bcf/: lib-syn  lib-syn.json
target_linux/release/.fingerprint/thiserror-93c02f55fe35928c/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/thiserror-impl-c65f2966f6a77eb5/: lib-thiserror_impl  lib-thiserror_impl.json
target_linux/release/.fingerprint/tokio-macros-95d5d9d183220780/: lib-tokio_macros  lib-tokio_macros.json
target_linux/release/.fingerprint/tracing-attributes-e74638df036f61f1/: lib-tracing_attributes  lib-tracing_attributes.json
target_linux/release/.fingerprint/typenum-e8f2976cb03ee015/: build-script-build-script-build  build-script-build-script-build.json
target_linux/release/.fingerprint/unicode-ident-3ae4259d8e7ea69a/: lib-unicode_ident  lib-unicode_ident.json
target_linux/release/.fingerprint/version_check-07f5b2810f043238/: lib-version_check  lib-version_check.json
target_linux/x86_64-unknown-linux-musl/release/: ostp.d
(+186 files in other folders)
