[workspace]
members = [
    "ostp-core",
    "ostp-client",
    "ostp-server",
    "ostp-jni", "ostp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSL 1.1"
version = "0.1.39"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_distr = "0.4"
snow = "0.9"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync", "signal"] }
tracing = "0.1"
x25519-dalek = "2"
sha2 = "0.10"
hmac = "0.12"
portable-atomic = "1.10"
