[workspace]
members = [
    "ostp-core",
    "ostp-client",
    "ostp-server",
    "ostp-jni", "ostp",
    "ostp-tun-helper",
    "ostp-prober"
]
exclude = ["ostp-gui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSL 1.1"
version = "0.2.70"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
chacha20poly1305 = "0.10"
rand = "0.8"
snow = "0.9"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync", "signal"] }
tracing = "0.1"
sha2 = "0.10"
hmac = "0.12"
portable-atomic = "1.10"
