[package]
name = "ostp-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
ostp-core = { path = "../ostp-core" }
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"
portable-atomic.workspace = true
chrono = "0.4"
socket2 = "0.6.3"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
futures-util = "0.3.32"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
