[package]
name = "ostp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
ostp-core = { path = "../ostp-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand.workspace = true
socket2 = "0.6.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
portable-atomic.workspace = true
