[package]
name = "ostp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
ostp-core = { path = "../ostp-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"
rand.workspace = true
socket2 = "0.6.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
portable-atomic.workspace = true
hmac.workspace = true
sha2.workspace = true
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rust-embed = "8.4"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures-util = "0.3"
simple-dns = "0.11.3"
