[package]
name = "ostp-tun-helper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ostp-tun-helper"
path = "src/main.rs"

[dependencies]
ostp-client = { path = "../ostp-client" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-atomic = { workspace = true }
chrono = "0.4"

[build-dependencies]
# no extra build deps needed; manifest is embedded via build.rs

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
