[package]
name = "ostp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ostp-client = { path = "../ostp-client" }
ostp-server = { path = "../ostp-server" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
json_comments = "0.2"
base64 = "0.22"
rand.workspace = true
url = "2.5"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ostp-core = { version = "0.2.68", path = "../ostp-core" }
